--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "WEB422 Seneca College",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.9"
